--- a/index.html
+++ b/index.html
@@ -39,7 +39,139 @@
       </div>
     </section>
     <section class="content">
-      <div class="container"></div>
+      <div class="container">
+        <div class="content-box">
+          <div class="content-main">
+            <h2 class="content-main__title">Результаты поиска</h2>
+            <div class="content-cards">
+              <a href="film.html" class="content-cards___item">
+                <div class="content-cards___item--img">
+                  <img src="images/film.png" alt="film">
+                </div>
+                <div class="content-cards___item--title">
+                  <h5>Марсианин, </h5>
+                  <span>The Martian 2015</span>
+                </div>
+                <p class="content-cards___item--descr">
+                  Фантастика, приключения
+                </p>
+                <p class="content-cards___item--rating">
+                  7.8
+                </p>
+              </a>
+              <a href="film.html" class="content-cards___item">
+                <div class="content-cards___item--img">
+                  <img src="images/film.png" alt="film">
+                </div>
+                <div class="content-cards___item--title">
+                  <h5>Марсианин, </h5>
+                  <span>The Martian 2015</span>
+                </div>
+                <p class="content-cards___item--descr">
+                  Фантастика, приключения
+                </p>
+                <p class="content-cards___item--rating">
+                  7.8
+                </p>
+              </a>
+              <a href="film.html" class="content-cards___item">
+                <div class="content-cards___item--img">
+                  <img src="images/film.png" alt="film">
+                </div>
+                <div class="content-cards___item--title">
+                  <h5>Марсианин, </h5>
+                  <span>The Martian 2015</span>
+                </div>
+                <p class="content-cards___item--descr">
+                  Фантастика, приключения
+                </p>
+                <p class="content-cards___item--rating">
+                  7.8
+                </p>
+              </a>
+              <a href="film.html" class="content-cards___item">
+                <div class="content-cards___item--img">
+                  <img src="images/film.png" alt="film">
+                </div>
+                <div class="content-cards___item--title">
+                  <h5>Марсианин, </h5>
+                  <span>The Martian 2015</span>
+                </div>
+                <p class="content-cards___item--descr">
+                  Фантастика, приключения
+                </p>
+                <p class="content-cards___item--rating">
+                  7.8
+                </p>
+              </a>
+              <a href="film.html" class="content-cards___item">
+                <div class="content-cards___item--img">
+                  <img src="images/film.png" alt="film">
+                </div>
+                <div class="content-cards___item--title">
+                  <h5>Марсианин, </h5>
+                  <span>The Martian 2015</span>
+                </div>
+                <p class="content-cards___item--descr">
+                  Фантастика, приключения
+                </p>
+                <p class="content-cards___item--rating">
+                  7.8
+                </p>
+              </a>
+              <a href="film.html" class="content-cards___item">
+                <div class="content-cards___item--img">
+                  <img src="images/film.png" alt="film">
+                </div>
+                <div class="content-cards___item--title">
+                  <h5>Марсианин, </h5>
+                  <span>The Martian 2015</span>
+                </div>
+                <p class="content-cards___item--descr">
+                  Фантастика, приключения
+                </p>
+                <p class="content-cards___item--rating">
+                  7.8
+                </p>
+              </a>
+            </div>
+          </div>
+          <div class="content-sidebar">
+            <div class="content-sidebar__info">
+              <h4 class="content-sidebar__info--titile">Подборки фильмов и сериалов</h4>
+              <div class="content-sidebar__wrapper">
+                <div class="content-sidebar__info__item">
+                  <h5>Топ-250</h5>
+                  <p>Подборка фильмов и сериалов
+                    с наивысшими оценками
+                    зрителей</p>
+                </div>
+                <div class="content-sidebar__info__item">
+                  <h5>Посмеяться от души</h5>
+                  <p>
+                    Подборка комедий, которые
+                    помогут расслабиться после
+                    работы
+                  </p>
+                </div>
+                <div class="content-sidebar__info__item">
+                  <h5>Запутанный сюжет</h5>
+                  <p>
+                    Триллеры и прключения
+                    с запутанным и интересным
+                    сюжетом. Невозможно оторваться!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="content-sidebar__footer">
+              <p>© ООО «Неткликс», 2024</p>
+              <a href="#">Политика конфиденциальности</a>
+              <a href="#">Обработка персональных данных</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 </body>
