--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NETCLICKS</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -30,8 +31,8 @@
     <section class="search">
       <div class="container">
         <div class="search-box">
-          <input type="text" placeholder="Что хотите посмотреть?">
-          <button>
+          <input id="search-input" type="text" placeholder="Что хотите посмотреть?">
+          <button id="search-button">
             <img src="images/search.svg" alt="search">
             <span>Найти</span>
           </button>
